# qsvn

./: CLAUDE.md  CMakeLists.txt  README.md  install.md
packaging/kde/: qsvn-dolphin.desktop
packaging/nautilus/qsvn/: Add  Apply Patch  Blame  Branch Tag  Check Repository  Checkout  Cleanup  Commit  Conflicts  Copy  Create Patch  Create Repository Here  Delete  Diff  Edit Conflict  Export  Ignore  Import  Lock  Log  Merge  Open in qsvn  Properties  Relocate  Remove Changelist  Rename  Repo Browser  Resolve  Revert  Set Changelist  Settings  Show Status  Switch  Unlock  Update  Update to Revision
packaging/thunar/: uca.xml
scripts/: build-deb.sh
src/: ApplicationSettings.cpp  ApplicationSettings.h  BranchTagDialog.cpp  BranchTagDialog.h  CheckoutDialog.cpp  CheckoutDialog.h  CommandLine.cpp  CommandLine.h  CommitDialog.cpp  CommitDialog.h  ConflictsDialog.cpp  ConflictsDialog.h  ExportDialog.cpp  ExportDialog.h  ExternalToolCommand.cpp  ExternalToolCommand.h  ImportDialog.cpp  ImportDialog.h  LogDialog.cpp  LogDialog.h  MainWindow.cpp  MainWindow.h  MergeDialog.cpp  MergeDialog.h  PropertiesDialog.cpp  PropertiesDialog.h  RelocateDialog.cpp  RelocateDialog.h  RepositoryBrowserDialog.cpp  RepositoryBrowserDialog.h  SVNClient.cpp  SVNClient.h  SettingsDialog.cpp  SettingsDialog.h  ShowStatusDialog.cpp  ShowStatusDialog.h  SvnClient.cpp  SvnClient.h  SwitchDialog.cpp  SwitchDialog.h  (+5 more)
src/utils/: cmd.cpp  cmd.h  file.cpp  file.h  log.cpp  log.h  stringutils.cpp  stringutils.h
tests/: svnclient_tests.cpp
